--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
     depends_on:
       - mariadb
     environment:
+      - WP_TITLE=${WP_TITLE}
       - WP_URL=${WP_URL}
       - WP_ADMIN_USER=${WP_ADMIN_USER}
       - WP_ADMIN_PWD=${WP_ADMIN_PWD}
