need wp-cli txt

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,5 @@
-# Volume Path
-# VOLPATH=/home/mg/data
+# Volumes
+VOLUME_PATH=/home/myunkim/data
 
 # Host
 HOST_NAME=localhost
@@ -9,10 +9,10 @@ HOST_IPV6=::1
 # Mariadb
 MARIADB_DB=wordpress
 MARIADB_USER=myunkim
-MARIADB_PWD=password
+MARIADB_PWD=pwduser
 MARIADB_HOST=mariadb
 MARIADB_ADMIN_USER=root
-MARIADB_ADMIN_PWD=password
+MARIADB_ADMIN_PWD=pwdroot
 
 # Wordpress
 WP_URL=https://myunkim.42.fr
