--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,11 +1,11 @@
 server {
-	server_name myunkim.42.fr;
+	server_name myunkim;
 
 	listen 443 ssl;
 	listen [::]:443 ssl;
 
-	ssl_certificate /etc/nginx/tls/myunkim.42.fr.crt;
-	ssl_certificate_key /etc/nginx/tls/myunkim.42.fr.key;
+	ssl_certificate /etc/nginx/tls/myunkim.crt;
+	ssl_certificate_key /etc/nginx/tls/myunkim.key;
 	ssl_protocols TLSv1.2 TLSv1.3;
 
 	root /var/www/wordpress;
@@ -13,20 +13,15 @@ server {
 
 	location / {
 		try_files $uri $uri/ =404;
-		location ~ \.php$ {
-			include fastcgi_params;
-			fastcgi_split_path_info ^(.+\.php)(/.+)$;
-			fastcgi_pass wordpress:9000;
-			fastcgi_index index.php;
-			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-			fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-		}
 	}
 
-	# location ~ \.php$ {
-	# 	include snippets/fastcgi-php.conf;
+	location ~ \.php$ {
+		include fastcgi_params;
 
-	# 	fastcgi_param SCRIPT_FILENAME /var/www/wordpress/$fastcgi_script_name;
-	# 	fastcgi_pass 172.xx.0.x:9000;
-	# }
+		fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+		fastcgi_pass wordpress:9000;
+		fastcgi_index index.php;
+
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	}
 }
