--- a/srcs/.env
+++ b/srcs/.env
@@ -3,8 +3,8 @@ VOLUME_PATH=/home/myunkim/data
 
 # Host
 HOST_NAME=localhost
-HOST_IPV4=127.0.0.1
-HOST_IPV6=::1
+# HOST_IPV4=127.0.0.1
+# HOST_IPV6=::1
 
 # Mariadb
 MARIADB_DB=wordpress
@@ -17,7 +17,7 @@ MARIADB_ADMIN_PWD=pwdroot
 # Wordpress
 WP_URL=https://myunkim.42.fr
 WP_ADMIN_USER=myunkim
-WP_ADMIN_PWD=password
+WP_ADMIN_PWD=pwduser
 
 WP_TITLE=Inception
 WP_ADMIN_EMAIL=myunkim@student.42seoul.kr
