--- a/srcs/.env
+++ b/srcs/.env
@@ -3,8 +3,6 @@ VOLUME_PATH=/home/myunkim/data
 
 # Host
 HOST_NAME=localhost
-# HOST_IPV4=127.0.0.1
-# HOST_IPV6=::1
 
 # Mariadb
 MARIADB_DB=wordpress
@@ -22,5 +20,5 @@ WP_ADMIN_PWD=pwduser
 WP_TITLE=Inception
 WP_ADMIN_EMAIL=myunkim@student.42seoul.kr
 WP_USER=eval
-WP_USER_PWD=password
+WP_USER_PWD=pwdeval
 WP_USER_EMAIL=eval@student.42seoul.kr
